deploy/internal/homepage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage
  namespace: homepage
  labels:
    app: homepage
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app: homepage
