deploy/internal/homepage/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homepage
  namespace: homepage
spec:
  entryPoints:
    - int-web-secure
  tls: {}
  routes:
    - kind: Rule
      match: Host(`internal.ticklethepanda.co.uk`)
      middlewares:
        - name: tinyauth
          namespace: tinyauth
      services:
        - name: homepage
          namespace: homepage
          port: 80
